--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -1,2 +1,8 @@
-<h1>Landing</h1>
-<button ui-sref="app.posts">Posts</button>
+<cd-tile
+    ng-repeat="project in landingCtrl.projects"
+    color="{{project.color}}"
+    title="{{project.title}}"
+    description="{{project.description}}"
+    ui-sref="{{project.sref}}">
+</cd-tile>
+
