--- a/components/demo-container/demo-container.scss
+++ b/components/demo-container/demo-container.scss
@@ -1,10 +1,12 @@
 .cd-demo-container {
   background: #fff;
   width: calc(100% - 60px);
+  max-width:960px;
   margin: 0 auto;
   padding: 10px;
   border-radius: 2px;
   box-shadow: $shadow-1;
+
 
   h2 {
     margin-bottom:$unit;
