--- a/views/search/search.html
+++ b/views/search/search.html
@@ -1,9 +1,3 @@
 <cd-demo-container>
-  <form ng-submit="rssCtrl.getFeed()">
-    <div class="cd-input-group">
-      <label for="url-input">RSS Feed URL</label>
-      <input id="url-input" type="text" placeholder="Ex: http://www.feedforall.com/sample.xml" ng-model="rssCtrl.rssUrl">
-    </div>
-    <cd-button type="submit">Submit</cd-button>
-  </form>
+  <h2>Work In Progress</h2>
 </cd-demo-container>
