--- a/components/button/button.scss
+++ b/components/button/button.scss
@@ -12,12 +12,25 @@
   cursor:pointer;
   outline: none;
   position: relative;
-  transition: box-shadow .3s;
+  transition: box-shadow .3s, background .3s;
 
 
   span {
     z-index: 1;
     position: relative;
+  }
+
+
+  &.is-loading {
+    background: gray;
+  }
+
+  &.is-resolved {
+    background: green;
+  }
+  
+  &.is-rejected {
+    background: red;
   }
 
   &:after {
