fixed promise button code block minification error

--- a/views/button/button.html
+++ b/views/button/button.html
@@ -36,12 +36,14 @@
   <h2>Form Usage:</h2>
 
   <p>To use the promise buttons on a form, add the <cd-code-inline>promise-button</cd-code-inline> directive to the <cd-code-inline>form</cd-code-inline> element, alongside the <cd-code-inline>ng-submit</cd-code-inline> directive.</p>
+  <!-- htmlmin:ignore -->
   <cd-code-block>
   &lt;form ng-submit=&quot;somePromiseFunction()&quot; promise-button&gt;
     &lt;!-- A Form with various inputs--&gt;
     &lt;button type=&quot;submit&quot;&gt;Submit&lt;/button&gt;
   &lt;/form&gt;
   </cd-code-block>
+  <!-- htmlmin:ignore -->
 
   <p>Example:</p>
 
