Ignore minification on code blocks

--- a/views/button/button.html
+++ b/views/button/button.html
@@ -23,9 +23,11 @@
   <p>Add <cd-code-inline>promise-button</cd-code-inline> to any element with an
     <cd-code-inline>ng-click="somePromiseFunction()"</cd-code-inline>.
     This promise with automatically be detected and watched.</p>
+  <!-- htmlmin:ignore -->
   <cd-code-block>
   &lt;button ng-click=&quot;somePromiseFunction()&quot; promise-button&gt;Click Me&lt;/button&gt;
   </cd-code-block>
+  <!-- htmlmin:ignore -->
 
   <p>Example:</p>
 
